@startuml entity-relationship-diagram

entity "Customer" as customer {
  + id: string (PK)
  ---
  name: string
  address: string
  email: string
  phoneNumber: string
  gender: string
}

entity "Cart" as cart {
  + id: string (PK)
  ---
  # customerId: string (FK)
}

entity "CartItem" as cartItem {
  + id: string (PK)
  ---
  # cartId: string (FK)
  # productId: string (FK)
  quantity: number
}

entity "Transaction" as transaction {
  + id: string (PK)
  ---
  # customerId: string (FK)
  # agencyId: string (FK)
  # productId: string (FK)
  # billingId: string (FK)
  price: number
}

entity "Billing" as billing {
  + id: string (PK)
  ---
  # customerId: string (FK)
  # productId: string (FK)
  # agencyId: string (FK)
  total: number
}

entity "Agency" as agency {
  + id: string (PK)
  ---
  name: string
  address: string
  email: string
  phoneNumber: string
}

entity "Product" as product {
  + id: string (PK)
  ---
  # agencyId: string (FK)
  name: string
  price: number
}

entity "Admin" as admin {
  + id: string (PK)
  ---
  name: string
  email: string
  password: string
}

customer ||--o{ cart : has
cart ||--o{ cartItem : has
cartItem }o--|| product : contains
transaction }o--|| customer : belongs to
transaction }o--|| agency : belongs to
transaction }o--|| product : contains
transaction ||--o{ billing : has
billing }o--|| customer : belongs to
billing }o--|| product : contains
billing }o--|| agency : belongs to
product }o--|| agency : belongs to
admin ||--o{ customer : manages
admin ||--o{ agency : manages
admin ||--o{ product : manages
admin ||--o{ transaction : manages
admin ||--o{ billing : manages

@enduml